font-size-correction cropping issue people_padding navopen_bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,11 +4,15 @@ $red:#ea4335;
 html{
   width: 100%;
   height: 100%;
+  overflow: hidden; /* Hide scrollbars */
+
 }
 body {
     margin: 0 0 55px 0;
     background-color:rgba(0,0,0,0.87);
     width: 100%;
+    overflow: hidden; /* Hide scrollbars */
+
 }
 h2{
   font-family: 'Google Sans',Roboto,Arial,sans-serif;
@@ -242,6 +246,7 @@ display: none;
   left:20px;
   right:-0.5px;
   font-size: 15px;
+  font-family: 'Google Sans',Roboto,Arial,sans-serif;
 
 }
 .mic__status{
@@ -654,6 +659,8 @@ color: var(--mdc-theme-on-surface,#000);
   color: #fff;
   font-size: 18px;
   margin:5px;
+  font-family: 'Google Sans',Roboto,Arial,sans-serif;
+
 }
 input {
   background-image: url(/static/img/search.svg);
